Run font inflation reftests with the reftest harness rather than inside of mochitest.  (Bug 743817)  r=sjohnson
UltraBlame original commit: ce4cfbc091dc1f092e7213184def3a1254b50556

--- a/layout/reftests/font-inflation/fixed-height-body-child-ref.html
+++ b/layout/reftests/font-inflation/fixed-height-body-child-ref.html
@@ -8,6 +8,11 @@
     <style>
       body {
         height: 100%;
+        /*
+         * We need overflow:hidden because we can't show a scrollbar due
+         * to https://bugzilla.mozilla.org/show_bug.cgi?id=743805 .
+         */
+        overflow: hidden;
       }
 
       div {
