--- a/layout/reftests/font-inflation/intrinsic-fit-1b-ref.html
+++ b/layout/reftests/font-inflation/intrinsic-fit-1b-ref.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <style>
-@font-face { font-family: Ahem; src: url(Ahem.ttf); }
+@font-face { font-family: Ahem; src: url(../fonts/Ahem.ttf); }
 html, body { margin: 0; padding: 0; }
 body { width: 450px }
 p {
@@ -11,4 +11,8 @@ p {
   font: 24px Ahem;
 }
 </style>
+
+
+
+
 <p>This is tiny bit of text.</p>
