--- a/layout/reftests/font-inflation/intrinsic-fit-1b.html
+++ b/layout/reftests/font-inflation/intrinsic-fit-1b.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <style>
-@font-face { font-family: Ahem; src: url(Ahem.ttf); }
+@font-face { font-family: Ahem; src: url(../fonts/Ahem.ttf); }
 html, body { margin: 0; padding: 0; }
-body { width: 150px }
+body { width: 450px }
 p {
   margin: 0;
   background: yellow;
   color: blue;
-  width: -moz-fit-content; /* computes to 150px */
+  width: -moz-fit-content; /* computes to 300px */
   font: 12px Ahem;
 }
 </style>
