--- a/layout/reftests/font-inflation/intrinsic-fit-1c-ref.html
+++ b/layout/reftests/font-inflation/intrinsic-fit-1c-ref.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <style>
-@font-face { font-family: Ahem; src: url(Ahem.ttf); }
+@font-face { font-family: Ahem; src: url(../fonts/Ahem.ttf); }
 html, body { margin: 0; padding: 0; }
-body { width: 10px }
+body { width: 150px }
 p {
   margin: 0;
   background: yellow;
   color: blue;
-  float: left;
-  width: auto; /* computes to 60px */
-  font: 12px Ahem;
+  width: 150px;
+  font: 14px Ahem;
 }
 </style>
+
 
 
 
