--- a/layout/reftests/font-inflation/intrinsic-fit-1c.html
+++ b/layout/reftests/font-inflation/intrinsic-fit-1c.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <style>
-@font-face { font-family: Ahem; src: url(Ahem.ttf); }
+@font-face { font-family: Ahem; src: url(../fonts/Ahem.ttf); }
 html, body { margin: 0; padding: 0; }
 body { width: 150px }
 p {
   margin: 0;
   background: yellow;
   color: blue;
-  width: 150px;
-  font: 14px Ahem;
+  width: -moz-fit-content; /* computes to 150px */
+  font: 12px Ahem;
 }
 </style>
 
