--- a/layout/reftests/font-inflation/intrinsic-fit-2a.html
+++ b/layout/reftests/font-inflation/intrinsic-fit-2a.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
 <style>
-@font-face { font-family: Ahem; src: url(Ahem.ttf); }
+@font-face { font-family: Ahem; src: url(../fonts/Ahem.ttf); }
 html, body { margin: 0; padding: 0; }
-body { width: 150px }
+body { width: 10px }
 p {
   margin: 0;
   background: yellow;
   color: blue;
   float: left;
-  width: auto; /* computes to 150px */
+  width: auto; /* computes to 60px */
   font: 12px Ahem;
 }
 </style>
-
 
 
 
