--- a/layout/reftests/font-inflation/intrinsic-min-1-ref.html
+++ b/layout/reftests/font-inflation/intrinsic-min-1-ref.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
 <style>
-@font-face { font-family: Ahem; src: url(Ahem.ttf); }
+@font-face { font-family: Ahem; src: url(../fonts/Ahem.ttf); }
 html, body { margin: 0; padding: 0; }
 body { width: 450px }
 p {
   margin: 0;
   background: yellow;
   color: blue;
-  width: 300px;
-  font: 24px Ahem;
+  width: 60px;
+  font: 12px Ahem;
 }
 </style>
 
 
 
-
-<p>This is tiny bit of text.</p>
+<p>This is some text.</p>
