--- a/layout/reftests/text-transform/all-lower-ref.html
+++ b/layout/reftests/text-transform/all-lower-ref.html
@@ -2,6 +2,10 @@
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <style type="text/css">
+   @font-face { font-family: foo; src: url(../fonts/dejavu-sans/DejaVuSans.ttf); }
+   p { font-family: foo; }
+  </style>
  </head>
  <body>
   <p>
@@ -85,7 +89,7 @@
 &#x012B;
 &#x012D;
 &#x012F;
-&#x0069;
+&#x0069;&#x0307; 
 &#x0133;
 &#x0135;
 &#x0137;
@@ -681,40 +685,40 @@
 &#x1F65;
 &#x1F66;
 &#x1F67;
-&#x1F80;
-&#x1F81;
-&#x1F82;
-&#x1F83;
-&#x1F84;
-&#x1F85;
-&#x1F86;
-&#x1F87;
-&#x1F90;
-&#x1F91;
-&#x1F92;
-&#x1F93;
-&#x1F94;
-&#x1F95;
-&#x1F96;
-&#x1F97;
-&#x1FA0;
-&#x1FA1;
-&#x1FA2;
-&#x1FA3;
-&#x1FA4;
-&#x1FA5;
-&#x1FA6;
-&#x1FA7;
+&#x1F80; 
+&#x1F81; 
+&#x1F82; 
+&#x1F83; 
+&#x1F84; 
+&#x1F85; 
+&#x1F86; 
+&#x1F87; 
+&#x1F90; 
+&#x1F91; 
+&#x1F92; 
+&#x1F93; 
+&#x1F94; 
+&#x1F95; 
+&#x1F96; 
+&#x1F97; 
+&#x1FA0; 
+&#x1FA1; 
+&#x1FA2; 
+&#x1FA3; 
+&#x1FA4; 
+&#x1FA5; 
+&#x1FA6; 
+&#x1FA7; 
 &#x1FB0;
 &#x1FB1;
 &#x1F70;
 &#x1F71;
-&#x1FB3;
+&#x1FB3; 
 &#x1F72;
 &#x1F73;
 &#x1F74;
 &#x1F75;
-&#x1FC3;
+&#x1FC3; 
 &#x1FD0;
 &#x1FD1;
 &#x1F76;
@@ -728,7 +732,7 @@
 &#x1F79;
 &#x1F7C;
 &#x1F7D;
-&#x1FF3;
+&#x1FF3; 
 &#x03C9;
 &#x006B;
 &#x00E5;
@@ -1008,6 +1012,46 @@
 &#xFF58;
 &#xFF59;
 &#xFF5A;
+&#x10428;
+&#x10429;
+&#x1042A;
+&#x1042B;
+&#x1042C;
+&#x1042D;
+&#x1042E;
+&#x1042F;
+&#x10430;
+&#x10431;
+&#x10432;
+&#x10433;
+&#x10434;
+&#x10435;
+&#x10436;
+&#x10437;
+&#x10438;
+&#x10439;
+&#x1043A;
+&#x1043B;
+&#x1043C;
+&#x1043D;
+&#x1043E;
+&#x1043F;
+&#x10440;
+&#x10441;
+&#x10442;
+&#x10443;
+&#x10444;
+&#x10445;
+&#x10446;
+&#x10447;
+&#x10448;
+&#x10449;
+&#x1044A;
+&#x1044B;
+&#x1044C;
+&#x1044D;
+&#x1044E;
+&#x1044F;
   </p>
  </body>
 </html>
