--- a/layout/reftests/text-transform/all-title-ref.html
+++ b/layout/reftests/text-transform/all-title-ref.html
@@ -2,6 +2,10 @@
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <style type="text/css">
+   @font-face { font-family: foo; src: url(../fonts/dejavu-sans/DejaVuSans.ttf); }
+   p { font-family: foo; }
+  </style>
  </head>
  <body>
   <p>
@@ -32,6 +36,7 @@
 &#x0059;x
 &#x005A;x
 &#x039C;x
+&#x0053;&#x0073;x 
 &#x00C0;x
 &#x00C1;x
 &#x00C2;x
@@ -99,6 +104,7 @@
 &#x0143;x
 &#x0145;x
 &#x0147;x
+&#x02BC;&#x004E;x 
 &#x014A;x
 &#x014C;x
 &#x014E;x
@@ -174,6 +180,7 @@
 &#x01EA;x
 &#x01EC;x
 &#x01EE;x
+&#x004A;&#x030C;x 
 &#x01F1;x
 &#x01F2;x
 &#x01F2;x
@@ -252,10 +259,12 @@
 &#x03FD;x
 &#x03FE;x
 &#x03FF;x
+&#x03AA;&#x0301;x 
 &#x0386;x
 &#x0388;x
 &#x0389;x
 &#x038A;x
+&#x03AB;&#x0301;x 
 &#x0391;x
 &#x0392;x
 &#x0393;x
@@ -491,6 +500,7 @@
 &#x0554;x
 &#x0555;x
 &#x0556;x
+&#x0535;&#x0582;x 
 &#xA77D;x
 &#x2C63;x
 &#x1E00;x
@@ -568,6 +578,11 @@
 &#x1E90;x
 &#x1E92;x
 &#x1E94;x
+&#x0048;&#x0331;x 
+&#x0054;&#x0308;x 
+&#x0057;&#x030A;x 
+&#x0059;&#x030A;x 
+&#x0041;&#x02BE;x 
 &#x1E60;x
 &#x1EA0;x
 &#x1EA2;x
@@ -653,9 +668,13 @@
 &#x1F4B;x
 &#x1F4C;x
 &#x1F4D;x
+&#x03A5;&#x0313;x 
 &#x1F59;x
+&#x03A5;&#x0313;&#x0300;x 
 &#x1F5B;x
+&#x03A5;&#x0313;&#x0301;x 
 &#x1F5D;x
+&#x03A5;&#x0313;&#x0342;x 
 &#x1F5F;x
 &#x1F68;x
 &#x1F69;x
@@ -679,41 +698,62 @@
 &#x1FEB;x
 &#x1FFA;x
 &#x1FFB;x
-&#x1F88;x
-&#x1F89;x
-&#x1F8A;x
-&#x1F8B;x
-&#x1F8C;x
-&#x1F8D;x
-&#x1F8E;x
-&#x1F8F;x
-&#x1F98;x
-&#x1F99;x
-&#x1F9A;x
-&#x1F9B;x
-&#x1F9C;x
-&#x1F9D;x
-&#x1F9E;x
-&#x1F9F;x
-&#x1FA8;x
-&#x1FA9;x
-&#x1FAA;x
-&#x1FAB;x
-&#x1FAC;x
-&#x1FAD;x
-&#x1FAE;x
-&#x1FAF;x
+&#x1F88;x 
+&#x1F89;x 
+&#x1F8A;x 
+&#x1F8B;x 
+&#x1F8C;x 
+&#x1F8D;x 
+&#x1F8E;x 
+&#x1F8F;x 
+&#x1F98;x 
+&#x1F99;x 
+&#x1F9A;x 
+&#x1F9B;x 
+&#x1F9C;x 
+&#x1F9D;x 
+&#x1F9E;x 
+&#x1F9F;x 
+&#x1FA8;x 
+&#x1FA9;x 
+&#x1FAA;x 
+&#x1FAB;x 
+&#x1FAC;x 
+&#x1FAD;x 
+&#x1FAE;x 
+&#x1FAF;x 
 &#x1FB8;x
 &#x1FB9;x
-&#x1FBC;x
+&#x1FBA;&#x0345;x 
+&#x1FBC;x 
+&#x0386;&#x0345;x 
+&#x0391;&#x0342;x 
+&#x0391;&#x0342;&#x0345;x 
 &#x0399;x
-&#x1FCC;x
+&#x1FCA;&#x0345;x 
+&#x1FCC;x 
+&#x0389;&#x0345;x 
+&#x0397;&#x0342;x 
+&#x0397;&#x0342;&#x0345;x 
 &#x1FD8;x
 &#x1FD9;x
+&#x03AA;&#x0300;x 
+&#x03AA;&#x0301;x 
+&#x0399;&#x0342;x 
+&#x03AA;&#x0342;x 
 &#x1FE8;x
 &#x1FE9;x
+&#x03AB;&#x0300;x 
+&#x03AB;&#x0301;x 
+&#x03A1;&#x0313;x 
 &#x1FEC;x
-&#x1FFC;x
+&#x03A5;&#x0342;x 
+&#x03AB;&#x0342;x 
+&#x1FFA;&#x0345;x 
+&#x1FFC;x 
+&#x038F;&#x0345;x 
+&#x03A9;&#x0342;x 
+&#x03A9;&#x0342;&#x0345;x 
 &#x2132;x
 &#x2160;x
 &#x2161;x
@@ -994,6 +1034,18 @@
 &#xA7A4;x
 &#xA7A6;x
 &#xA7A8;x
+&#x0046;&#x0066;x 
+&#x0046;&#x0069;x 
+&#x0046;&#x006C;x 
+&#x0046;&#x0066;&#x0069;x 
+&#x0046;&#x0066;&#x006C;x 
+&#x0053;&#x0074;x 
+&#x0053;&#x0074;x 
+&#x0544;&#x0576;x 
+&#x0544;&#x0565;x 
+&#x0544;&#x056B;x 
+&#x054E;&#x0576;x 
+&#x0544;&#x056D;x 
 &#xFF21;x
 &#xFF22;x
 &#xFF23;x
@@ -1020,6 +1072,46 @@
 &#xFF38;x
 &#xFF39;x
 &#xFF3A;x
+&#x10400;x
+&#x10401;x
+&#x10402;x
+&#x10403;x
+&#x10404;x
+&#x10405;x
+&#x10406;x
+&#x10407;x
+&#x10408;x
+&#x10409;x
+&#x1040A;x
+&#x1040B;x
+&#x1040C;x
+&#x1040D;x
+&#x1040E;x
+&#x1040F;x
+&#x10410;x
+&#x10411;x
+&#x10412;x
+&#x10413;x
+&#x10414;x
+&#x10415;x
+&#x10416;x
+&#x10417;x
+&#x10418;x
+&#x10419;x
+&#x1041A;x
+&#x1041B;x
+&#x1041C;x
+&#x1041D;x
+&#x1041E;x
+&#x1041F;x
+&#x10420;x
+&#x10421;x
+&#x10422;x
+&#x10423;x
+&#x10424;x
+&#x10425;x
+&#x10426;x
+&#x10427;x
   </p>
  </body>
 </html>
