--- a/layout/reftests/text-transform/all-title.html
+++ b/layout/reftests/text-transform/all-title.html
@@ -3,7 +3,8 @@
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <style type="text/css">
-   p { text-transform: capitalize; }
+   @font-face { font-family: foo; src: url(../fonts/dejavu-sans/DejaVuSans.ttf); }
+   p { font-family: foo; text-transform: capitalize; }
   </style>
  </head>
  <body>
@@ -35,6 +36,7 @@
 &#x0079;x
 &#x007A;x
 &#x00B5;x
+&#x00DF;x 
 &#x00E0;x
 &#x00E1;x
 &#x00E2;x
@@ -102,6 +104,7 @@
 &#x0144;x
 &#x0146;x
 &#x0148;x
+&#x0149;x 
 &#x014B;x
 &#x014D;x
 &#x014F;x
@@ -177,6 +180,7 @@
 &#x01EB;x
 &#x01ED;x
 &#x01EF;x
+&#x01F0;x 
 &#x01F1;x
 &#x01F2;x
 &#x01F3;x
@@ -255,10 +259,12 @@
 &#x037B;x
 &#x037C;x
 &#x037D;x
+&#x0390;x 
 &#x03AC;x
 &#x03AD;x
 &#x03AE;x
 &#x03AF;x
+&#x03B0;x 
 &#x03B1;x
 &#x03B2;x
 &#x03B3;x
@@ -494,6 +500,7 @@
 &#x0584;x
 &#x0585;x
 &#x0586;x
+&#x0587;x 
 &#x1D79;x
 &#x1D7D;x
 &#x1E01;x
@@ -571,6 +578,11 @@
 &#x1E91;x
 &#x1E93;x
 &#x1E95;x
+&#x1E96;x 
+&#x1E97;x 
+&#x1E98;x 
+&#x1E99;x 
+&#x1E9A;x 
 &#x1E9B;x
 &#x1EA1;x
 &#x1EA3;x
@@ -656,9 +668,13 @@
 &#x1F43;x
 &#x1F44;x
 &#x1F45;x
+&#x1F50;x 
 &#x1F51;x
+&#x1F52;x 
 &#x1F53;x
+&#x1F54;x 
 &#x1F55;x
+&#x1F56;x 
 &#x1F57;x
 &#x1F60;x
 &#x1F61;x
@@ -682,41 +698,62 @@
 &#x1F7B;x
 &#x1F7C;x
 &#x1F7D;x
-&#x1F80;x
-&#x1F81;x
-&#x1F82;x
-&#x1F83;x
-&#x1F84;x
-&#x1F85;x
-&#x1F86;x
-&#x1F87;x
-&#x1F90;x
-&#x1F91;x
-&#x1F92;x
-&#x1F93;x
-&#x1F94;x
-&#x1F95;x
-&#x1F96;x
-&#x1F97;x
-&#x1FA0;x
-&#x1FA1;x
-&#x1FA2;x
-&#x1FA3;x
-&#x1FA4;x
-&#x1FA5;x
-&#x1FA6;x
-&#x1FA7;x
+&#x1F80;x 
+&#x1F81;x 
+&#x1F82;x 
+&#x1F83;x 
+&#x1F84;x 
+&#x1F85;x 
+&#x1F86;x 
+&#x1F87;x 
+&#x1F90;x 
+&#x1F91;x 
+&#x1F92;x 
+&#x1F93;x 
+&#x1F94;x 
+&#x1F95;x 
+&#x1F96;x 
+&#x1F97;x 
+&#x1FA0;x 
+&#x1FA1;x 
+&#x1FA2;x 
+&#x1FA3;x 
+&#x1FA4;x 
+&#x1FA5;x 
+&#x1FA6;x 
+&#x1FA7;x 
 &#x1FB0;x
 &#x1FB1;x
-&#x1FB3;x
+&#x1FB2;x 
+&#x1FB3;x 
+&#x1FB4;x 
+&#x1FB6;x 
+&#x1FB7;x 
 &#x1FBE;x
-&#x1FC3;x
+&#x1FC2;x 
+&#x1FC3;x 
+&#x1FC4;x 
+&#x1FC6;x 
+&#x1FC7;x 
 &#x1FD0;x
 &#x1FD1;x
+&#x1FD2;x 
+&#x1FD3;x 
+&#x1FD6;x 
+&#x1FD7;x 
 &#x1FE0;x
 &#x1FE1;x
+&#x1FE2;x 
+&#x1FE3;x 
+&#x1FE4;x 
 &#x1FE5;x
-&#x1FF3;x
+&#x1FE6;x 
+&#x1FE7;x 
+&#x1FF2;x 
+&#x1FF3;x 
+&#x1FF4;x 
+&#x1FF6;x 
+&#x1FF7;x 
 &#x214E;x
 &#x2170;x
 &#x2171;x
@@ -997,6 +1034,18 @@
 &#xA7A5;x
 &#xA7A7;x
 &#xA7A9;x
+&#xFB00;x 
+&#xFB01;x 
+&#xFB02;x 
+&#xFB03;x 
+&#xFB04;x 
+&#xFB05;x 
+&#xFB06;x 
+&#xFB13;x 
+&#xFB14;x 
+&#xFB15;x 
+&#xFB16;x 
+&#xFB17;x 
 &#xFF41;x
 &#xFF42;x
 &#xFF43;x
@@ -1023,6 +1072,46 @@
 &#xFF58;x
 &#xFF59;x
 &#xFF5A;x
+&#x10428;x
+&#x10429;x
+&#x1042A;x
+&#x1042B;x
+&#x1042C;x
+&#x1042D;x
+&#x1042E;x
+&#x1042F;x
+&#x10430;x
+&#x10431;x
+&#x10432;x
+&#x10433;x
+&#x10434;x
+&#x10435;x
+&#x10436;x
+&#x10437;x
+&#x10438;x
+&#x10439;x
+&#x1043A;x
+&#x1043B;x
+&#x1043C;x
+&#x1043D;x
+&#x1043E;x
+&#x1043F;x
+&#x10440;x
+&#x10441;x
+&#x10442;x
+&#x10443;x
+&#x10444;x
+&#x10445;x
+&#x10446;x
+&#x10447;x
+&#x10448;x
+&#x10449;x
+&#x1044A;x
+&#x1044B;x
+&#x1044C;x
+&#x1044D;x
+&#x1044E;x
+&#x1044F;x
   </p>
  </body>
 </html>
