--- a/layout/reftests/text-transform/all-upper-ref.html
+++ b/layout/reftests/text-transform/all-upper-ref.html
@@ -2,6 +2,10 @@
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <style type="text/css">
+   @font-face { font-family: foo; src: url(../fonts/dejavu-sans/DejaVuSans.ttf); }
+   p { font-family: foo; }
+  </style>
  </head>
  <body>
   <p>
@@ -32,6 +36,7 @@
 &#x0059;
 &#x005A;
 &#x039C;
+&#x0053;&#x0053; 
 &#x00C0;
 &#x00C1;
 &#x00C2;
@@ -99,6 +104,7 @@
 &#x0143;
 &#x0145;
 &#x0147;
+&#x02BC;&#x004E; 
 &#x014A;
 &#x014C;
 &#x014E;
@@ -171,6 +177,7 @@
 &#x01EA;
 &#x01EC;
 &#x01EE;
+&#x004A;&#x030C; 
 &#x01F1;
 &#x01F1;
 &#x01F4;
@@ -248,10 +255,12 @@
 &#x03FD;
 &#x03FE;
 &#x03FF;
+&#x03AA;&#x0301; 
 &#x0386;
 &#x0388;
 &#x0389;
 &#x038A;
+&#x03AB;&#x0301; 
 &#x0391;
 &#x0392;
 &#x0393;
@@ -487,6 +496,7 @@
 &#x0554;
 &#x0555;
 &#x0556;
+&#x0535;&#x0552; 
 &#xA77D;
 &#x2C63;
 &#x1E00;
@@ -564,6 +574,11 @@
 &#x1E90;
 &#x1E92;
 &#x1E94;
+&#x0048;&#x0331; 
+&#x0054;&#x0308; 
+&#x0057;&#x030A; 
+&#x0059;&#x030A; 
+&#x0041;&#x02BE; 
 &#x1E60;
 &#x1EA0;
 &#x1EA2;
@@ -649,9 +664,13 @@
 &#x1F4B;
 &#x1F4C;
 &#x1F4D;
+&#x03A5;&#x0313; 
 &#x1F59;
+&#x03A5;&#x0313;&#x0300; 
 &#x1F5B;
+&#x03A5;&#x0313;&#x0301; 
 &#x1F5D;
+&#x03A5;&#x0313;&#x0342; 
 &#x1F5F;
 &#x1F68;
 &#x1F69;
@@ -675,41 +694,89 @@
 &#x1FEB;
 &#x1FFA;
 &#x1FFB;
-&#x1F88;
-&#x1F89;
-&#x1F8A;
-&#x1F8B;
-&#x1F8C;
-&#x1F8D;
-&#x1F8E;
-&#x1F8F;
-&#x1F98;
-&#x1F99;
-&#x1F9A;
-&#x1F9B;
-&#x1F9C;
-&#x1F9D;
-&#x1F9E;
-&#x1F9F;
-&#x1FA8;
-&#x1FA9;
-&#x1FAA;
-&#x1FAB;
-&#x1FAC;
-&#x1FAD;
-&#x1FAE;
-&#x1FAF;
+&#x1F08;&#x0399; 
+&#x1F09;&#x0399; 
+&#x1F0A;&#x0399; 
+&#x1F0B;&#x0399; 
+&#x1F0C;&#x0399; 
+&#x1F0D;&#x0399; 
+&#x1F0E;&#x0399; 
+&#x1F0F;&#x0399; 
+&#x1F08;&#x0399; 
+&#x1F09;&#x0399; 
+&#x1F0A;&#x0399; 
+&#x1F0B;&#x0399; 
+&#x1F0C;&#x0399; 
+&#x1F0D;&#x0399; 
+&#x1F0E;&#x0399; 
+&#x1F0F;&#x0399; 
+&#x1F28;&#x0399; 
+&#x1F29;&#x0399; 
+&#x1F2A;&#x0399; 
+&#x1F2B;&#x0399; 
+&#x1F2C;&#x0399; 
+&#x1F2D;&#x0399; 
+&#x1F2E;&#x0399; 
+&#x1F2F;&#x0399; 
+&#x1F28;&#x0399; 
+&#x1F29;&#x0399; 
+&#x1F2A;&#x0399; 
+&#x1F2B;&#x0399; 
+&#x1F2C;&#x0399; 
+&#x1F2D;&#x0399; 
+&#x1F2E;&#x0399; 
+&#x1F2F;&#x0399; 
+&#x1F68;&#x0399; 
+&#x1F69;&#x0399; 
+&#x1F6A;&#x0399; 
+&#x1F6B;&#x0399; 
+&#x1F6C;&#x0399; 
+&#x1F6D;&#x0399; 
+&#x1F6E;&#x0399; 
+&#x1F6F;&#x0399; 
+&#x1F68;&#x0399; 
+&#x1F69;&#x0399; 
+&#x1F6A;&#x0399; 
+&#x1F6B;&#x0399; 
+&#x1F6C;&#x0399; 
+&#x1F6D;&#x0399; 
+&#x1F6E;&#x0399; 
+&#x1F6F;&#x0399; 
 &#x1FB8;
 &#x1FB9;
-&#x1FBC;
+&#x1FBA;&#x0399; 
+&#x0391;&#x0399; 
+&#x0386;&#x0399; 
+&#x0391;&#x0342; 
+&#x0391;&#x0342;&#x0399; 
+&#x0391;&#x0399; 
 &#x0399;
-&#x1FCC;
+&#x1FCA;&#x0399; 
+&#x0397;&#x0399; 
+&#x0389;&#x0399; 
+&#x0397;&#x0342; 
+&#x0397;&#x0342;&#x0399; 
+&#x0397;&#x0399; 
 &#x1FD8;
 &#x1FD9;
+&#x03AA;&#x0300; 
+&#x03AA;&#x0301; 
+&#x0399;&#x0342; 
+&#x03AA;&#x0342; 
 &#x1FE8;
 &#x1FE9;
+&#x03AB;&#x0300; 
+&#x03AB;&#x0301; 
+&#x03A1;&#x0313; 
 &#x1FEC;
-&#x1FFC;
+&#x03A5;&#x0342; 
+&#x03AB;&#x0342; 
+&#x1FFA;&#x0399; 
+&#x03A9;&#x0399; 
+&#x038F;&#x0399; 
+&#x03A9;&#x0342; 
+&#x03A9;&#x0342;&#x0399; 
+&#x03A9;&#x0399; 
 &#x2132;
 &#x2160;
 &#x2161;
@@ -990,6 +1057,18 @@
 &#xA7A4;
 &#xA7A6;
 &#xA7A8;
+&#x0046;&#x0046; 
+&#x0046;&#x0049; 
+&#x0046;&#x004C; 
+&#x0046;&#x0046;&#x0049; 
+&#x0046;&#x0046;&#x004C; 
+&#x0053;&#x0054; 
+&#x0053;&#x0054; 
+&#x0544;&#x0546; 
+&#x0544;&#x0535; 
+&#x0544;&#x053B; 
+&#x054E;&#x0546; 
+&#x0544;&#x053D; 
 &#xFF21;
 &#xFF22;
 &#xFF23;
@@ -1016,6 +1095,46 @@
 &#xFF38;
 &#xFF39;
 &#xFF3A;
+&#x10400;
+&#x10401;
+&#x10402;
+&#x10403;
+&#x10404;
+&#x10405;
+&#x10406;
+&#x10407;
+&#x10408;
+&#x10409;
+&#x1040A;
+&#x1040B;
+&#x1040C;
+&#x1040D;
+&#x1040E;
+&#x1040F;
+&#x10410;
+&#x10411;
+&#x10412;
+&#x10413;
+&#x10414;
+&#x10415;
+&#x10416;
+&#x10417;
+&#x10418;
+&#x10419;
+&#x1041A;
+&#x1041B;
+&#x1041C;
+&#x1041D;
+&#x1041E;
+&#x1041F;
+&#x10420;
+&#x10421;
+&#x10422;
+&#x10423;
+&#x10424;
+&#x10425;
+&#x10426;
+&#x10427;
   </p>
  </body>
 </html>
