--- a/layout/reftests/text-transform/all-upper.html
+++ b/layout/reftests/text-transform/all-upper.html
@@ -3,7 +3,8 @@
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <style type="text/css">
-   p { text-transform: uppercase; }
+   @font-face { font-family: foo; src: url(../fonts/dejavu-sans/DejaVuSans.ttf); }
+   p { font-family: foo; text-transform: uppercase; }
   </style>
  </head>
  <body>
@@ -35,6 +36,7 @@
 &#x0079;
 &#x007A;
 &#x00B5;
+&#x00DF; 
 &#x00E0;
 &#x00E1;
 &#x00E2;
@@ -102,6 +104,7 @@
 &#x0144;
 &#x0146;
 &#x0148;
+&#x0149; 
 &#x014B;
 &#x014D;
 &#x014F;
@@ -174,6 +177,7 @@
 &#x01EB;
 &#x01ED;
 &#x01EF;
+&#x01F0; 
 &#x01F2;
 &#x01F3;
 &#x01F5;
@@ -251,10 +255,12 @@
 &#x037B;
 &#x037C;
 &#x037D;
+&#x0390; 
 &#x03AC;
 &#x03AD;
 &#x03AE;
 &#x03AF;
+&#x03B0; 
 &#x03B1;
 &#x03B2;
 &#x03B3;
@@ -490,6 +496,7 @@
 &#x0584;
 &#x0585;
 &#x0586;
+&#x0587; 
 &#x1D79;
 &#x1D7D;
 &#x1E01;
@@ -567,6 +574,11 @@
 &#x1E91;
 &#x1E93;
 &#x1E95;
+&#x1E96; 
+&#x1E97; 
+&#x1E98; 
+&#x1E99; 
+&#x1E9A; 
 &#x1E9B;
 &#x1EA1;
 &#x1EA3;
@@ -652,9 +664,13 @@
 &#x1F43;
 &#x1F44;
 &#x1F45;
+&#x1F50; 
 &#x1F51;
+&#x1F52; 
 &#x1F53;
+&#x1F54; 
 &#x1F55;
+&#x1F56; 
 &#x1F57;
 &#x1F60;
 &#x1F61;
@@ -678,41 +694,89 @@
 &#x1F7B;
 &#x1F7C;
 &#x1F7D;
-&#x1F80;
-&#x1F81;
-&#x1F82;
-&#x1F83;
-&#x1F84;
-&#x1F85;
-&#x1F86;
-&#x1F87;
-&#x1F90;
-&#x1F91;
-&#x1F92;
-&#x1F93;
-&#x1F94;
-&#x1F95;
-&#x1F96;
-&#x1F97;
-&#x1FA0;
-&#x1FA1;
-&#x1FA2;
-&#x1FA3;
-&#x1FA4;
-&#x1FA5;
-&#x1FA6;
-&#x1FA7;
+&#x1F80; 
+&#x1F81; 
+&#x1F82; 
+&#x1F83; 
+&#x1F84; 
+&#x1F85; 
+&#x1F86; 
+&#x1F87; 
+&#x1F88; 
+&#x1F89; 
+&#x1F8A; 
+&#x1F8B; 
+&#x1F8C; 
+&#x1F8D; 
+&#x1F8E; 
+&#x1F8F; 
+&#x1F90; 
+&#x1F91; 
+&#x1F92; 
+&#x1F93; 
+&#x1F94; 
+&#x1F95; 
+&#x1F96; 
+&#x1F97; 
+&#x1F98; 
+&#x1F99; 
+&#x1F9A; 
+&#x1F9B; 
+&#x1F9C; 
+&#x1F9D; 
+&#x1F9E; 
+&#x1F9F; 
+&#x1FA0; 
+&#x1FA1; 
+&#x1FA2; 
+&#x1FA3; 
+&#x1FA4; 
+&#x1FA5; 
+&#x1FA6; 
+&#x1FA7; 
+&#x1FA8; 
+&#x1FA9; 
+&#x1FAA; 
+&#x1FAB; 
+&#x1FAC; 
+&#x1FAD; 
+&#x1FAE; 
+&#x1FAF; 
 &#x1FB0;
 &#x1FB1;
-&#x1FB3;
+&#x1FB2; 
+&#x1FB3; 
+&#x1FB4; 
+&#x1FB6; 
+&#x1FB7; 
+&#x1FBC; 
 &#x1FBE;
-&#x1FC3;
+&#x1FC2; 
+&#x1FC3; 
+&#x1FC4; 
+&#x1FC6; 
+&#x1FC7; 
+&#x1FCC; 
 &#x1FD0;
 &#x1FD1;
+&#x1FD2; 
+&#x1FD3; 
+&#x1FD6; 
+&#x1FD7; 
 &#x1FE0;
 &#x1FE1;
+&#x1FE2; 
+&#x1FE3; 
+&#x1FE4; 
 &#x1FE5;
-&#x1FF3;
+&#x1FE6; 
+&#x1FE7; 
+&#x1FF2; 
+&#x1FF3; 
+&#x1FF4; 
+&#x1FF6; 
+&#x1FF7; 
+&#x1FFC; 
 &#x214E;
 &#x2170;
 &#x2171;
@@ -993,6 +1057,18 @@
 &#xA7A5;
 &#xA7A7;
 &#xA7A9;
+&#xFB00; 
+&#xFB01; 
+&#xFB02; 
+&#xFB03; 
+&#xFB04; 
+&#xFB05; 
+&#xFB06; 
+&#xFB13; 
+&#xFB14; 
+&#xFB15; 
+&#xFB16; 
+&#xFB17; 
 &#xFF41;
 &#xFF42;
 &#xFF43;
@@ -1019,6 +1095,46 @@
 &#xFF58;
 &#xFF59;
 &#xFF5A;
+&#x10428;
+&#x10429;
+&#x1042A;
+&#x1042B;
+&#x1042C;
+&#x1042D;
+&#x1042E;
+&#x1042F;
+&#x10430;
+&#x10431;
+&#x10432;
+&#x10433;
+&#x10434;
+&#x10435;
+&#x10436;
+&#x10437;
+&#x10438;
+&#x10439;
+&#x1043A;
+&#x1043B;
+&#x1043C;
+&#x1043D;
+&#x1043E;
+&#x1043F;
+&#x10440;
+&#x10441;
+&#x10442;
+&#x10443;
+&#x10444;
+&#x10445;
+&#x10446;
+&#x10447;
+&#x10448;
+&#x10449;
+&#x1044A;
+&#x1044B;
+&#x1044C;
+&#x1044D;
+&#x1044E;
+&#x1044F;
   </p>
  </body>
 </html>
