--- a/browser/components/downloads/content/downloads.css
+++ b/browser/components/downloads/content/downloads.css
@@ -49,6 +49,7 @@ richlistitem[type="download"]:not([selected]) button {
                                            .downloadCancelMenuItem,
 
 .download-state:not(:-moz-any([state="1"], 
+                              [state="2"], 
                               [state="3"], 
                               [state="6"], 
                               [state="8"], 
