--- a/layout/reftests/border-radius/intersecting-clipping-1-refc.html
+++ b/layout/reftests/border-radius/intersecting-clipping-1-refc.html
@@ -28,7 +28,7 @@
 <script>
 var canvas = document.getElementById("canvas");
 var cx = canvas.getContext("2d");
-cx.fillStyle="green";
+cx.fillStyle="lime";
 cx.fillRect(0, 0, 200, 100);
 </script>
 
@@ -47,9 +47,9 @@ cx.fillRect(0, 0, 200, 100);
 <div class="spot" style="top: 97px; left: 19px; background: white"></div>
 <div class="spot" style="top: 82px; left: 1px; background: white"></div>
 
-<div class="spot" style="top: 10px; left: 8px; background: green"></div>
-<div class="spot" style="top: 89px; left: 8px; background: green"></div>
-<div class="spot" style="top: 10px; left: 191px; background: green"></div>
-<div class="spot" style="top: 89px; left: 191px; background: green"></div>
+<div class="spot" style="top: 10px; left: 8px; background: lime"></div>
+<div class="spot" style="top: 89px; left: 8px; background: lime"></div>
+<div class="spot" style="top: 10px; left: 191px; background: lime"></div>
+<div class="spot" style="top: 89px; left: 191px; background: lime"></div>
 
 </div>
