--- a/browser/themes/winstripe/browser/places/bookmarkProperties.css
+++ b/browser/themes/winstripe/browser/places/bookmarkProperties.css
@@ -52,6 +52,27 @@
 }
 
 
+#expander {
+  min-width: 0;
+}
+
+.up {
+  list-style-image: url("chrome://global/skin/arrow/arrow-up.gif");
+}
+
+.up:hover {
+  list-style-image: url("chrome://global/skin/arrow/arrow-up-hov.gif");
+}
+
+.down {
+  list-style-image: url("chrome://global/skin/arrow/arrow-dn.gif");
+}
+
+.down:hover {
+  list-style-image: url("chrome://global/skin/arrow/arrow-dn-hov.gif");
+}
+
+
 
 
 
