--- a/mobile/android/base/resources/layout/tabs_panel.xml
+++ b/mobile/android/base/resources/layout/tabs_panel.xml
@@ -29,8 +29,7 @@
     <view class="org.mozilla.gecko.TabsPanel$TabsListContainer"
           android:id="@+id/tabs_container"
           android:layout_width="fill_parent"
-          android:layout_height="0dip"
-          android:layout_weight="1.0">
+          android:layout_height="wrap_content">
 
         <org.mozilla.gecko.TabsTray android:id="@+id/normal_tabs"
                                     style="@style/TabsList"
@@ -58,25 +57,5 @@
                                       android:scrollbarStyle="outsideOverlay"/>
 
     </view>
-
-    <RelativeLayout android:id="@+id/tabs_panel_footer"
-                    android:layout_width="fill_parent"
-                    android:layout_height="@dimen/browser_toolbar_height">
-
-        <view class="org.mozilla.gecko.TabsPanel$TabsPanelToolbar"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:background="@color/background_tabs">
-
-            <include layout="@layout/tabs_panel_footer"/>
-
-        </view>
-
-        <View android:layout_width="fill_parent"
-              android:layout_height="2dp"
-              android:layout_alignParentTop="true"
-              android:background="#1A000000"/>
-
-    </RelativeLayout>
 
 </merge>
