--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -823,8 +823,12 @@ setting[type="directory"] > .preferences-alignment {
   visibility: collapse;
 }
 
+
 #browsers {
   background: white;
+  transition-property: margin-top;
+  transition-duration: .3s;
+  transition-timing-function: ease-in-out;
 }
 
 
