Bug 855544 - Implement a network monitor, r=dcamp,msucan
UltraBlame original commit: 3fda72d2c6c31f5555f3ce1f900d80dac45869e1

--- a/browser/themes/osx/devtools/debugger.css
+++ b/browser/themes/osx/devtools/debugger.css
@@ -21,20 +21,6 @@
 
 
 
-#instruments-pane {
-  min-width: 50px;
-  -moz-margin-start: 0px !important;
-  
-
-
-}
-
-#instruments-pane[animated] {
-  transition: margin 0.25s ease-in-out;
-}
-
-
-
 .list-widget-item {
   padding: 2px;
 }
@@ -312,12 +298,12 @@
   background: none;
   box-shadow: none;
   border: none;
-  list-style-image: url("chrome://browser/skin/devtools/debugger-expand.png");
+  list-style-image: url("chrome://browser/skin/devtools/debugger-collapse.png");
   -moz-image-region: rect(0px,16px,16px,0px);
 }
 
-#instruments-pane-toggle:not([toggled]) {
-  list-style-image: url("chrome://browser/skin/devtools/debugger-collapse.png");
+#instruments-pane-toggle[pane-collapsed] {
+  list-style-image: url("chrome://browser/skin/devtools/debugger-expand.png");
 }
 
 #instruments-pane-toggle:active {
