--- a/browser/themes/linux/devtools/debugger.css
+++ b/browser/themes/linux/devtools/debugger.css
@@ -19,20 +19,6 @@
 
 
 
-#instruments-pane {
-  min-width: 50px;
-  -moz-margin-start: 0px !important;
-  
-
-
-}
-
-#instruments-pane[animated] {
-  transition: margin 0.25s ease-in-out;
-}
-
-
-
 .list-widget-item {
   padding: 2px;
 }
@@ -310,12 +296,12 @@
   background: none;
   box-shadow: none;
   border: none;
-  list-style-image: url("chrome://browser/skin/devtools/debugger-expand.png");
+  list-style-image: url("chrome://browser/skin/devtools/debugger-collapse.png");
   -moz-image-region: rect(0px,16px,16px,0px);
 }
 
-#instruments-pane-toggle:not([toggled]) {
-  list-style-image: url("chrome://browser/skin/devtools/debugger-collapse.png");
+#instruments-pane-toggle[pane-collapsed] {
+  list-style-image: url("chrome://browser/skin/devtools/debugger-expand.png");
 }
 
 #instruments-pane-toggle:active {
