--- a/toolkit/themes/windows/global/inContentUI.css
+++ b/toolkit/themes/windows/global/inContentUI.css
@@ -17,7 +17,7 @@
   color: -moz-dialogText;
   background-color: -moz-dialog;
   background-image: 
-                    -moz-linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0) 30%),
+                    linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0) 30%),
                     
                     url("chrome://global/skin/inContentUI/background-texture.png");
 }
@@ -32,7 +32,7 @@ html|html {
     color: #000;
     background-color: #CCD9EA;
     background-image: 
-                      -moz-linear-gradient(top, rgb(237,245,252), rgba(237,245,252,0) 156px),
+                      linear-gradient(rgb(237,245,252), rgba(237,245,252,0) 156px),
                       
                       url("chrome://global/skin/inContentUI/background-texture.png");
   }
@@ -43,11 +43,11 @@ html|html {
     color: #000;
     
     background-image: 
-                      -moz-linear-gradient(top, rgb(237,245,252) 3px, rgba(237,245,252,0) 156px),
+                      linear-gradient(rgb(237,245,252) 3px, rgba(237,245,252,0) 156px),
                       
-                      -moz-linear-gradient(left,
-                                           rgba(255,255,255,0.2), rgba(255,255,255,0) 40%,
-                                           rgba(255,255,255,0) 60%, rgba(255,255,255,0.2)),
+                      linear-gradient(to right,
+                                      rgba(255,255,255,0.2), rgba(255,255,255,0) 40%,
+                                      rgba(255,255,255,0) 60%, rgba(255,255,255,0.2)),
                       
                       -moz-linear-gradient(left 32deg,
                                            
@@ -73,9 +73,8 @@ html|html {
   
   overflow: hidden;
   background-color: rgba(255, 255, 255, 0.35);
-  background-image: -moz-linear-gradient(top,
-                                         rgba(255, 255, 255, 0),
-                                         rgba(255, 255, 255, 0.75));
+  background-image: linear-gradient(rgba(255, 255, 255, 0),
+                                    rgba(255, 255, 255, 0.75));
   border: 1px solid #C3CEDF;
   border-radius: 5px;
 }
@@ -89,8 +88,8 @@ html|html {
     -moz-appearance: none;
     color: black;
     padding: 0 5px;
-    background: -moz-linear-gradient(rgba(251, 252, 253, 0.95), rgba(246, 247, 248, 0) 49%, 
-                                     rgba(211, 212, 213, 0.45) 51%, rgba(225, 226, 229, 0.3));
+    background: linear-gradient(rgba(251, 252, 253, 0.95), rgba(246, 247, 248, 0) 49%, 
+                                rgba(211, 212, 213, 0.45) 51%, rgba(225, 226, 229, 0.3));
     background-clip: padding-box;
     border-radius: 3px;
     border: 1px solid rgba(31, 64, 100, 0.4);
