--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -2118,20 +2118,24 @@ toolbar[mode="text"] toolbarbutton.chevron > .toolbarbutton-icon {
   -moz-margin-end: 2px;
 }
 
+#social-toolbar-item > .toolbarbutton-1 > .toolbarbutton-icon,
+.social-notification-container > .toolbarbutton-1 > .toolbarbutton-icon {
+  margin: 5px 3px;
+}
+
 #social-provider-button > .toolbarbutton-menu-dropmarker {
   display: none;
 }
 
-.toolbarbutton-badge-container {
-  margin: 5px 3px;
+.social-notification-container {
+  
+
+
+
   position: relative;
 }
 
-toolbar[iconsize="small"] .toolbarbutton-badge-container {
-  margin: 0;
-}
-
-.toolbarbutton-badge[badge]:not([badge=""])::after {
+.social-notification-container > .toolbarbutton-1[badge]:not([badge=""])::after {
   
   font-size: 9px;
   font-weight: bold;
@@ -2142,11 +2146,11 @@ toolbar[iconsize="small"] .toolbarbutton-badge-container {
   border-radius: 2px;
   box-shadow: 0 1px 0 rgba(0,39,121,0.77);
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 2px;
+  right: 2px;
 }
 
-.toolbarbutton-badge[badge]:not([badge=""]):-moz-locale-dir(rtl)::after {
+.social-notification-container > .toolbarbutton-1[badge]:not([badge=""]):-moz-locale-dir(rtl)::after {
   left: 2px;
   right: auto;
 }
