--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -185,7 +185,7 @@
   
 
   display: block !important;
-  background: -moz-linear-gradient(top, #606060, #8a8a8a) fixed;
+  background: linear-gradient(#606060, #8a8a8a) fixed;
   height: 100%;
 }
 
