--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -618,6 +618,7 @@ toolbarbutton[type="badged"] {
 
 chatbox {
   -moz-binding: url("chrome://browser/content/socialchat.xml#chatbox");
+  transition: height 150ms ease-out, width 150ms ease-out;
 }
 
 chatbar {
