Bug 835999 - add a topsites grid to the snapped view.r=mbrubeck
UltraBlame original commit: fff11ed20a04edae7cd180e38f4fa9026706f240

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -859,6 +859,11 @@ setting[type="directory"] > .preferences-alignment {
 }
 
 
+#snapped-topsites-grid > richgriditem > .richgrid-item-content {
+  -moz-box-orient: horizontal;
+}
+
+
 
 #start[viewstate="snapped"],
 #snapped-start:not([viewstate="snapped"]) {
