Bug 854077 - Use radio buttons for "Do Not Track" options and add a neutral option r=ally
UltraBlame original commit: 0536fbab2e8c56364c69441ae7bbe376105f47b1

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -790,6 +790,11 @@ setting[type="directory"] > .preferences-alignment {
   -moz-box-align: center;
 }
 
+
+setting[type="radio"] > vbox {
+  display: none;
+}
+
 #prefs-homepage-options, #prefs-homepage-popup {
   min-width: 200px;
 }
