--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -640,8 +640,17 @@ toolbarbutton[type="badged"] {
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#toolbarbutton-badged");
 }
 
+
 chatbox {
   -moz-binding: url("chrome://browser/content/socialchat.xml#chatbox");
+  transition: height 150ms ease-out, width 150ms ease-out;
+  height: 285px;
+  width: 260px; 
+}
+
+chatbox[minimized="true"] {
+  width: 160px;
+  height: 20px; 
 }
 
 chatbar {
