--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -876,6 +876,25 @@ setting[type="radio"] > vbox {
 }
 
 
+#start-autocomplete[viewstate="snapped"] .richgrid-item-content {
+  -moz-box-orient: horizontal;
+}
+
+#start-autocomplete[viewstate="snapped"] {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+#start-container[viewstate="snapped"] {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+#start-container[viewstate="snapped"] .meta-section {
+  margin: 0px;
+}
+
+
 
 
 #content-viewport[startpage],
