Bug 847354 - Avoid the xbl bindings for inputs/textareas on b2g r=fabrice
UltraBlame original commit: 2edddd17a9debae69c7e1c3f75a2f061daf8ae5d

--- a/b2g/chrome/content/content.css
+++ b/b2g/chrome/content/content.css
@@ -282,3 +282,11 @@ label:active,
 textarea:active {
   background-color: rgba(141, 184, 216, 0.5);
 }
+
+#ifdef MOZ_WIDGET_GONK
+
+input,
+textarea {
+-moz-binding: none !important;
+}
+#endif
