Bug 829056 - Cross-slide gesture module for Fx start tiles. r=mbrubeck
UltraBlame original commit: fa5e73d8da49417a2599592498e77520c1d738f7

--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -491,6 +491,10 @@ richgriditem[selected] .richgrid-item-content::after {
     border: @metro_border_xthick@ solid @selected_color@;
 }
 
+richgriditem:not([crosssliding]) {
+  transition: transform ease-out 0.2s;
+}
+
 richgriditem .richgrid-icon-container {
   padding-bottom: 2px;
 }
