--- a/layout/style/TopLevelImageDocument.css
+++ b/layout/style/TopLevelImageDocument.css
@@ -22,16 +22,8 @@
     bottom: 0;
     left: 0;
   }
-}
 
-@media print {
-  
-
-
-
-
-
-  img {
-    display: block;
+  .completeRotation {
+    transition: transform 0.3s ease 0s;
   }
 }
