Bug 856917 (part 1) - Improve about:memory's functional UI.  r=kats.
UltraBlame original commit: 0b2c39985587efd2ea3f772c277942e3a4693aee

--- a/mobile/android/themes/core/aboutMemory.css
+++ b/mobile/android/themes/core/aboutMemory.css
@@ -139,7 +139,13 @@ h2 {
 
 
 
-.hasKids:hover {
-  text-decoration: underline;
+
+button {
+  margin: 1%;
+  padding: 2%;
+}
+
+.hiddenOnMobile {
+  display: none;
 }
 
