--- a/browser/themes/osx/downloads/allDownloadsViewOverlay.css
+++ b/browser/themes/osx/downloads/allDownloadsViewOverlay.css
@@ -16,8 +16,8 @@
 .downloadTypeIcon {
   -moz-margin-end: 8px;
   
-  min-height: 32px;
-  min-width: 32px;
+  height: 32px;
+  width: 32px;
 }
 
 .blockedIcon {
