Bug 865172 - Add z-index to cross-sliding tiles so they overlap when dragged. r=mbrubeck
UltraBlame original commit: 825ac604a69b6dd1d2f3dee774dcf1390182a092

--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -491,6 +491,11 @@ richgriditem[selected] .richgrid-item-content::after {
     border: @metro_border_xthick@ solid @selected_color@;
 }
 
+richgriditem[crosssliding] {
+  z-index: 1;
+}
+
+
 richgriditem:not([crosssliding]) {
   transition: transform ease-out 0.2s;
 }
