Bug 865768 - CSS files should use '%' as preprocessor marker. r=fabrice
UltraBlame original commit: 9bce0ea84f386a362ba97fa04ae7b17b9ecece34

--- a/b2g/chrome/content/content.css
+++ b/b2g/chrome/content/content.css
@@ -283,10 +283,10 @@ textarea:active {
   background-color: rgba(141, 184, 216, 0.5);
 }
 
-#ifdef MOZ_WIDGET_GONK
+%ifdef MOZ_WIDGET_GONK
 
 input,
 textarea {
 -moz-binding: none !important;
 }
-#endif
+%endif
