--- a/browser/components/feeds/test/test_bug589543.html
+++ b/browser/components/feeds/test/test_bug589543.html
@@ -20,7 +20,7 @@
 SimpleTest.waitForExplicitFinish();
 
 addLoadEvent(function() {
-  var doc = SpecialPowers.wrap($("testFrame").contentDocument);
+  var doc = SpecialPowers.wrap($("testFrame")).contentDocument;
   var daddy = doc.getElementById("feedSubscribeLine");
   var popup = doc.getAnonymousElementByAttribute(daddy, "anonid", "handlersMenuPopup");
   isnot(popup, null, "Feed preview should have a handlers popup");
