--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -871,6 +871,10 @@ setting[type="radio"] > vbox {
   -moz-box-orient: horizontal;
 }
 
+[viewstate="snapped"] .canSnapTiles .richgrid-item-desc {
+ -moz-margin-start: 8px;
+}
+
 
 
 #start[viewstate="snapped"],
