Bug 862916 - console.dir() shows blank box if Logging filter is off; r=past
UltraBlame original commit: 13c1c11245ab90aebe2560a5fb304c7dd62388d7

--- a/browser/themes/osx/devtools/webconsole.css
+++ b/browser/themes/osx/devtools/webconsole.css
@@ -94,6 +94,13 @@
   display: none;
 }
 
+.hidden-message {
+  display: block;
+  visibility: hidden;
+  height: 0;
+  overflow: hidden;
+}
+
 
 
 .webconsole-filter-button[checked] {
