--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -12,6 +12,7 @@
   --tab-separator-image: url(chrome://browser/skin/tabbrowser/tab-separator.png);
   --tab-separator-size: 3px 100%;
   --tab-separator-opacity: 1;
+  --tab-stroke-background-size: auto 100%;
 }
 
 %define tabCurveWidth 30px
@@ -376,7 +377,7 @@
                     @fgTabTexture@,
                     none;
   background-repeat: repeat-x;
-  background-size: auto 100%;
+  background-size: var(--tab-stroke-background-size), auto 100%;
   
 
   padding-top: 2px;
@@ -390,7 +391,7 @@
                     @fgTabTextureLWT@;
 
   
-  background-size: auto 100%, auto 100%, auto auto;
+  background-size: var(--tab-stroke-background-size), auto 100%, auto auto;
 }
 
 
