Bug 1194258 - Make sure tracking protection section is hidden in Control Center when it's preffed off;r=paolo
UltraBlame original commit: 75baf2ad7d3257cd20afbbbfdbd8ad5af0ac1730

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -35,6 +35,12 @@
   display: none;
 }
 
+
+
+#identity-popup [hidden] {
+  display: none !important;
+}
+
 #identity-popup,
 #identity-popup:not([panelopen]) .panel-viewstack[viewtype="main"]:not([transitioning]) #identity-popup-mainView {
   
