Bug 1188942 - Enable vibrant background for tabview/panorama on OS X Yosemite, r=gijs,mstange
UltraBlame original commit: a88e6868a6aa0c91a3571bb162e5cf6d6ee0ff39

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -1454,6 +1454,13 @@ toolbarbutton[constrain-size="true"][cui-areatype="toolbar"] > .toolbarbutton-ba
 }
 
 
+@media (-moz-mac-yosemite-theme) {
+  #tab-view {
+    -moz-appearance: -moz-mac-vibrancy-light;
+  }
+}
+
+
 #alltabs_undoCloseTab {
   list-style-image: url(chrome://browser/skin/undoCloseTab.png);
 }
