Bug 1171517 - Use styling to hide performance graphs rather than the Element.hidden property. r=vp
UltraBlame original commit: cebf9a1b7e47f22749a06b433591b5437366223f

--- a/browser/themes/shared/devtools/performance.css
+++ b/browser/themes/shared/devtools/performance.css
@@ -22,6 +22,16 @@
 
 
 
+
+
+.hidden {
+  display: none;
+  width: 0px;
+  height: 0px;
+}
+
+
+
 #performance-toolbar-control-other {
   -moz-padding-end: 5px;
 }
