Bug 1196017 - Deal with TP turned on globally in about:privatebrowsing. r=paolo
UltraBlame original commit: 2f84e6e88b82a8bfce25dc19e896fd10e4e29f5b

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.css
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.css
@@ -1,6 +1,8 @@
+%if 0
 
 
 
+%endif
 
 @import url("chrome://global/skin/in-content/common.css");
 
@@ -17,6 +19,9 @@ body.private .showNormal,
 body.normal .showPrivate,
 body[tpEnabled] .showTpDisabled,
 body:not([tpEnabled]) .showTpEnabled {
+  display: none !important;
+}
+body[globalTpEnabled] .showGlobalTpDisabled {
   display: none !important;
 }
 
