--- a/browser/devtools/webide/themes/webide.css
+++ b/browser/devtools/webide/themes/webide.css
@@ -16,6 +16,14 @@
   padding: 0 12px;
 }
 
+
+
+
+
+#main-toolbar.sidebar-layout .panel-button-anchor {
+  display: none;
+}
+
 #action-buttons-container {
   -moz-box-pack: center;
   height: 50px;
