Bug 1163184 - fix window borders on devedition theme on windows, r=bgrins
UltraBlame original commit: fc1f32837c782176ed0b7ea2f6526ebe06c1b730

--- a/browser/themes/windows/devedition.css
+++ b/browser/themes/windows/devedition.css
@@ -240,6 +240,22 @@
   }
 }
 
+
+
+
+#browser-panel {
+  
+  background-image: none !important;
+  border-top: none !important;
+}
+
+#navigator-toolbox {
+  
+
+  border-left: none !important;
+  border-right: none !important;
+}
+
 @media (-moz-os-version: windows-win10) {
   
   #main-window .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
