Bug 1196313 - Add a transition for the background color of the identity box on hover. r=Gijs,dao
UltraBlame original commit: 0077cc462038eaf7cd0c2c16298b0b58b2f9c061

--- a/browser/themes/shared/identity-block/identity-block.inc.css
+++ b/browser/themes/shared/identity-block/identity-block.inc.css
@@ -28,6 +28,9 @@
   padding: 3px 5px;
   margin-inline-end: 4px;
   overflow: hidden;
+  
+
+  transition: background-color 150ms ease, padding-left, padding-right;
 }
 
 #identity-box:hover,
@@ -57,17 +60,15 @@
   border-radius: 0;
 }
 
-@conditionalForwardWithUrlbar@:not([switchingtabs]) > #urlbar > #identity-box {
-  transition: padding-left, padding-right;
-}
-
 @conditionalForwardWithUrlbar@ > #forward-button[disabled] + #urlbar > #notification-popup-box[hidden] + #identity-box {
   padding-inline-start: calc(var(--backbutton-urlbar-overlap) + 4px);
 }
 
 @conditionalForwardWithUrlbar@:hover:not([switchingtabs]) > #forward-button[disabled] + #urlbar > #notification-popup-box[hidden] + #identity-box {
   
-  transition-delay: 100s;
+
+
+  transition-delay: 0s, 100s, 100s;
 }
 
 @conditionalForwardWithUrlbar@:not(:hover) > #forward-button[disabled] + #urlbar > #notification-popup-box[hidden] + #identity-box {
