Bug 1198236 - Pinned tab separators shouldn't touch the toolbar. r=gijs
UltraBlame original commit: cbb955b0495c9f5a6775a2029f2ac9187d54c93c

--- a/browser/themes/shared/devedition.inc.css
+++ b/browser/themes/shared/devedition.inc.css
@@ -284,9 +284,10 @@ searchbar:not([oneoffui]) .search-go-button {
 }
 
 
-#TabsToolbar {
-  --tab-separator-margin: 0;
-  --tab-separator-opacity: 0.2 !important;
+.tabbrowser-tab::after,
+.tabbrowser-tab::before {
+  background: currentColor;
+  opacity: 0.2 !important;
 }
 
 .tabbrowser-arrowscrollbox > .scrollbutton-down,
