Bug 1062839 - Fix the direction of the camera/screenshare notification anchor icons on the chat window toolbar in RTL mode (should be the same as LTR). r=mikedeboer
UltraBlame original commit: c989c49afbbb437d55db3874a548048aac4fff65

--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -106,9 +106,18 @@
   padding-left: 7px;
 }
 
+
 #notification-popup-box:-moz-locale-dir(rtl),
+
+
 .notification-anchor-icon:-moz-locale-dir(rtl) {
   transform: scaleX(-1);
+}
+
+
+
+.notification-anchor-icon.chat-toolbarbutton:-moz-locale-dir(rtl) {
+  transform: none;
 }
 
 .notification-anchor-icon {
