Bug 1119250 - remove old searchbar UI - part 3 - remove the old search drop down, r=Mossop.
UltraBlame original commit: d808114269ad684aa8b78d825b88ea3d7c916066

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -380,8 +380,7 @@ toolbar:not(#TabsToolbar) > #personal-bookmarks {
 
 
 @media (resolution: 2dppx) {
-  .searchbar-engine-image,
-  .searchbar-engine-menuitem > .menu-iconic-left > .menu-iconic-icon {
+  .searchbar-engine-image {
     image-rendering: -moz-crisp-edges;
   }
 }
