Bug 1338106 - hide toolbox toolbar icons for narrow viewport;r=ntim
- remove text-overflow: ellipsis to maximize readable text
- add media query to hide toolbar icons when viewport width < 700px

MozReview-Commit-ID: 4HBFciWSuie

UltraBlame original commit: b1eeaade030704e4f7130e125a1c53cc21e049d0

--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -91,6 +91,8 @@
 
 
 .devtools-tab {
+  display: flex;
+  align-items: center;
   min-width: 32px;
   min-height: 24px;
   margin: 0;
@@ -101,21 +103,22 @@
   padding-inline-end: 10px;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
   background-color: transparent;
+}
+
+
+@media (max-width: 700px) {
+  
+  .devtools-tab:not(.devtools-tab-icon-only) > img {
+    visibility: hidden;
+    margin-inline-start: 5px;
+    margin-inline-end: 0;
+    width: 0;
+  }
 }
 
 .devtools-tab-icon-only {
   padding-inline-end: 2px;
-}
-
-.devtools-tab span {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding-inline-end: 13px;
-  position: relative;
-  top: 1px;
 }
 
 
@@ -171,11 +174,12 @@
   border: none;
   margin: 0;
   margin-inline-start: 10px;
+  margin-inline-end: 5px;
   opacity: 0.8;
   max-height: 16px;
   width: 16px; 
   vertical-align: text-top;
-  margin-inline-end: 6px;
+  flex-shrink: 0;
 }
 
 
