Bug 1350234 - Clean up network monitor CSS. r=Honza
MozReview-Commit-ID: 6wTU8sg54oe

UltraBlame original commit: 1379bfa0f9217effd4c0a8cc70c1c1f1c2afb339

--- a/devtools/client/jsonview/css/main.css
+++ b/devtools/client/jsonview/css/main.css
@@ -17,10 +17,17 @@
 
 
 
+.tab-panel-inner {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .panelContent {
   direction: ltr;
   overflow-y: auto;
   width: 100%;
+  flex: 1;
 }
 
 
@@ -41,20 +48,9 @@
 
 
 
-.theme-firebug .panelContent {
-  height: calc(100% - 30px);
-}
-
 
 
 .theme-firebug .tabs .tabs-navigation {
   font-size: 14px;
 }
 
-
-
-
-.theme-dark .panelContent,
-.theme-light .panelContent {
-  height: calc(100% - 27px);
-}
