Bug 1395732 - Implement new defaultFavicon.svg with context-fill. r=jwatt,mak
MozReview-Commit-ID: IB5TWxbg0MX

UltraBlame original commit: 6b394489fbb4261de0cfdb66399d9adcb499c5cb

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -886,10 +886,12 @@ xul|treechildren::-moz-tree-row {
 }
 
 
-xul|treechildren::-moz-tree-cell-text {
+xul|treechildren::-moz-tree-cell-text,
+xul|treechildren::-moz-tree-image {
   color: var(--in-content-text-color);
 }
 
-xul|treechildren::-moz-tree-cell-text(selected) {
+xul|treechildren::-moz-tree-cell-text(selected),
+xul|treechildren::-moz-tree-image(selected) {
   color: var(--in-content-selected-text);
 }
